<resources>
    <string name="facebook_app_id">721512744988306</string>
    <string name="google_maps_api">AIzaSyAeRjBp9uCEHLe-dIdsGVKegO9KzsmHmwA</string>
    <string name="fb_login_protocol_scheme">fb721512744988306</string>
    <string name="app_name">Utrain</string>
    <string name="my_porfile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="athlete">Athlete</string>
    <string name="add_cards">Add Card</string>
    <string name="fill_your_card_details">Fill your card details</string>
    <string name="name_on_card">Name on card</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="stard">Stard</string>
    <string name="chat">Chat</string>
    <string name="card_number">Card Number</string>
    <string name="add_card_details">Add Card Details</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cards">Cards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_the_best_coaches">Explore the best Coaches with just a tap!</string>
    <string name="explore_the_best_org">Explore the best Organization with just a tap!</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="find_your_coach">Find your coach</string>
    <string name="log_in">Log In</string>
    <string name="continue_with_email">Continue with email </string>
    <string name="forget_password">Forget Password?</string>
    <string name="dont_have_a_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="sign_up_fb">Log in with Facebook</string>
    <string name="log_in_with_email">Log in with Email</string>
    <string name="find_the_coaches_organization">Find the coaches / Organization</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="do_you_want_enable_gps">Do you want to enable the GPS?</string>
    <string name="save">Save</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="find_the_best_coach_text">Find the best coach to train you best!</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_hava_an_account_text">Already have an account?</string>
    <string name="gender">Gender</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="other">Other</string>
    <string name="or">OR</string>
    <string name="privacy_policy">Privay policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="read_policy_terms">Read policy terms</string>
    <string name="optional">Optional fields</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="change_password">Change Password</string>
    <string name="notification">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="logout">Logout</string>
    <string name="dummy_text_notification_recycler">Rajeev has been scheduled for a training session with you.</string>
    <string name="notificationActivity">Notifications</string>
    <string name="no_more_notifications">No more Notifications</string>
    <string name="message">Messages</string>
    <string name="new_password">New password</string>
    <string name="submit">Submit</string>
    <string name="go_back">Go back</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_password_doesnt_match">Password doesn\'t match</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="coach">Coach</string>
    <string name="bio">Bio</string>
    <string name="enter_bio">I\'am profession sports trainer</string>
    <string name="location">Location</string>
    <string name="business_hour">Start Business Hour</string>
    <string name="phone_no">Phone No.</string>
    <string name="profession">Profession</string>
    <string name="type">Type</string>
    <string name="expertise">Expertise</string>
    <string name="experience_detail">Experience Detail</string>
    <string name="training_service_detail">Training Service Detail</string>
    <string name="hourly_price">Hourly Price</string>
    <string name="dollar_sign_value">$</string>
    <string name="enter_hourly_rate">4</string>
    <string name="rihana">Rihana</string>
    <string name="description">I like the caption @robin.</string>
    <string name="just_now">Just Now</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="rating_header_text">How much you satisfied with your coach?</string>
    <string name="rate_your_coach_text">Rate your coach by giving him/her rating</string>
    <string name="rating_profileNameTv">Roger David</string>
    <string name="provice_your_training_of_soccor">provide your training of soccor</string>
    <string name="booking_slot">Booking slot</string>
    <string name="private_tv">Private</string>
    <string name="booking_slot_fill_your_req">Fill your requirements for booking the slot</string>
    <string name="select_sports_training">Select Sports Training</string>
    <string name="select_sports_organization">Select Sports organization</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="upload">Upload</string>
    <string name="browse_phot_from">Browse photo from</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="select_media">Select media</string>
    <string name="experience">Enter Experience details</string>
    <string name="service_details">Enter service details</string>
    <string name="organization">Organization</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="loading">Loading...</string>
    <string name="something_went_wrong">Something went wrong try again</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="please_click_again_to_exit">Press back again to exit</string>
    <string name="confirm_booking_btn_booking_slot">Confirm Booking</string>
    <string name="date_format">30/12/2019</string>
    <string name="time_format">12:30</string>
    <string name="enter_email">Enter Email</string>
    <string name="choose_services">Choose Services</string>
    <string name="enter_location">Enter Location</string>
    <string name="start_business_hour">Start Business Hour</string>
    <string name="end_business_hour">End Business hour</string>
    <string name="service_activity_service">Service price</string>
    <string name="who_you_are">Who you are</string>
    <string name="next">Next</string>
    <string name="athlete_login_header">Log In</string>
    <string name="select_address">Select Address using location button</string>
    <string name="enter_your_email_to_reset">Enter your email to reset!</string>
    <string name="enter_six_diget_phone_number">Enter minimum six digit</string>
    <string name="enter_ten_diget_phone_number">Invalid Mobile Number</string>
    <string name="add_profile_image">Add profile image</string>
    <string name="enter_your_bio">Enter your bio</string>
    <string name="select_business_start_hour">Select business start hour</string>
    <string name="select_business_end_hour">Select business end hours</string>
    <string name="enter_your_experience_details">Enter experience details</string>
    <string name="enter_your_experites">Enter your experience</string>
    <string name="enter_profession_type">Enter profession type</string>
    <string name="enter_org_service_details">Enter training service details</string>
    <string name="sevice_summary_of_services">Summary of service</string>
    <string name="service_name">Service Name</string>
    <string name="enter_price">Enter price</string>
    <string name="add_portforlio_text">Upload your Portfolio</string>
    <string name="apply">Apply</string>
    <string name="price">Price</string>
    <string name="rate">Price($/Hour)</string>
    <string name="services">Service(s)</string>
    <string name="campus_tv">Campus</string>
    <string name="enter_training_session">Training Session</string>
    <string name="register_for_the_session">Register for the session</string>
    <string name="training_session">Training Session</string>
    <string name="coach_name">Roger David</string>
    <string name="create_event">Create Event</string>
    <string name="create_event_dummytxt">Quisque euismod placerat ipsum, sed placerat nibh posuere et.</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="create">Create</string>
    <string name="capicity">Capicity</string>
    <string name="create_training_session">Create Training Session</string>
    <string name="Gregg">Gregg</string>
    <string name="offer_space">Offer Space</string>
    <string name="cost">Cost</string>
    <string name="find_space">Find Space</string>
    <string name="history">History</string>
    <string name="sports">Sports</string>
    <string name="soccor">Soccor</string>
    <string name="name_desc">Roger David</string>
    <string name="time">Time:</string>
    <string name="rihana_pay_you">Rihana paid you</string>
    <string name="payment_fragment_rate">$23.45</string>
    <string name="date">Date:</string>
    <string name="review_rating">Rihana rated you</string>
    <string name="session_fragment">Session</string>
    <string name="payment_fragment">Payment</string>
    <string name="review_fragment">Review</string>
    <string name="req_image">Request Image</string>
    <string name="running">Running</string>
    <string name="candidate">Candidate</string>
    <string name="find_a_place">Find a Place</string>
    <string name="park">Park</string>
    <string name="number_of_candidate_on_place">60 -70 candidates</string>
    <string name="price_display">$44/Hr</string>
    <string name="venue">Venue</string>
    <string name="training_session_desc">I am professional sports trainer</string>
    <string name="coach_nametv">Coach Name</string>
    <string name="coach_name_enter">Gregg</string>
    <string name="venue_detail">24Seven Gym,First Floor, Texas</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="date_time_format">30/12/2019</string>
    <string name="view">View</string>
    <string name="discoverRecylerName">ChristianLawn</string>
    <string name="booking">Bookings</string>
    <string name="transaction">Transaction</string>
    <string name="about_us">About us</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Setting</string>
    <string name="distance">Distance</string>
    <string name="dashboard">Dashboard</string>
</resources>