<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_disable"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_disable"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_reqimage"
        android:title="@string/req_image"
        />
    <item
        android:id="@+id/navigation_running"
        android:icon="@drawable/ic_running_enable"
        android:title="@string/running" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notifications" />

</menu>
