<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_stard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/stard" />

    <item
        android:id="@+id/navigation_edit"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/edit" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/chat" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
