<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/eventCardBgColor">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/discoverImageCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/findPlaceImage"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sophie"
                    app:layout_constraintLeft_toLeftOf="parent" />


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/placeNameInfoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/discoverRecylerName"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintLeft_toRightOf="@id/discoverImageCard"
                app:layout_constraintTop_toTopOf="@id/discoverImageCard" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/placenamesTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/find_a_place"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintLeft_toLeftOf="@id/placeNameInfoTv"
                app:layout_constraintTop_toBottomOf="@+id/placeNameInfoTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/placenameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:paddingRight="@dimen/_10sdp"
                android:singleLine="true"
                android:text="@string/park"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toRightOf="@+id/placenamesTv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placeNameInfoTv"

                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/findPlaceCandidateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins_regular"
                android:text="@string/candidate"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintLeft_toLeftOf="@+id/placenamesTv"
                app:layout_constraintTop_toBottomOf="@id/placenameTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/findPlaceCandidateDetailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins_regular"
                android:text="@string/number_of_candidate_on_place"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintLeft_toLeftOf="@id/placenameTv"
                app:layout_constraintTop_toBottomOf="@id/placenameTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/findPlaceDistanceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins_regular"
                android:text="@string/distance"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintLeft_toLeftOf="@+id/placenamesTv"
                app:layout_constraintTop_toBottomOf="@id/findPlaceCandidateTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/findPlaceDistanceDetailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/distance"
                android:textSize="@dimen/_10sdp"

                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                app:layout_constraintLeft_toLeftOf="@id/placenameTv"
                app:layout_constraintTop_toBottomOf="@id/findPlaceCandidateDetailTv" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/findPlacePriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:fontFamily="@font/poppins_regular"
                android:text="@string/price"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="@+id/findPlaceCandidateTv"
                app:layout_constraintTop_toBottomOf="@id/findPlaceDistanceTv" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/findPlaceActualPriceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/price_display"
                android:textColor="@color/notificationRedIcon"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="@+id/findPlaceCandidateDetailTv"
                app:layout_constraintTop_toBottomOf="@id/findPlaceDistanceDetailTv" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>