<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/find_place_layout_round_design"
    android:elevation="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp"


    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_20sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/findPlaceImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_place_holder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/findPlaceImage">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/constraint_background"
                    android:background="@drawable/card_shape_outline_skyblue_bottom_round">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/colorWhite"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/trainingSessionProfessionDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/training_session_desc"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/trainingSessionCoachNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/coach_nametv"
                        android:textSize="@dimen/_8sdp"
                        app:layout_constraintLeft_toLeftOf="@+id/trainingSessionProfessionDesc"
                        app:layout_constraintTop_toBottomOf="@id/trainingSessionProfessionDesc" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/trainingSessionCoachNameEnterNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/coach_name_enter"
                        android:textSize="@dimen/_8sdp"
                        app:layout_constraintLeft_toRightOf="@id/trainingSessionCoachNameTv"
                        app:layout_constraintTop_toBottomOf="@id/trainingSessionProfessionDesc" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/trainingSessionVenueTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/venue"
                        android:textSize="@dimen/_8sdp"
                        app:layout_constraintRight_toRightOf="@+id/trainingSessionCoachNameTv"
                        app:layout_constraintTop_toBottomOf="@id/trainingSessionCoachNameTv" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/trainingSessionVenueDetailTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/venue_detail"
                        android:textSize="@dimen/_8sdp"
                        android:singleLine="true"
                        android:maxLength="30"
                        app:layout_constraintLeft_toLeftOf="@id/trainingSessionCoachNameEnterNameTv"
                        app:layout_constraintTop_toBottomOf="@id/trainingSessionCoachNameEnterNameTv" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/trainingSessionDateTimeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/date_time"
                        android:textSize="@dimen/_8sdp"
                        app:layout_constraintRight_toRightOf="@id/trainingSessionVenueTv"
                        app:layout_constraintTop_toBottomOf="@id/trainingSessionVenueTv" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/trainingSessionDateTimeEnterTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/date_time_format"
                        android:textSize="@dimen/_8sdp"
                        app:layout_constraintLeft_toLeftOf="@id/trainingSessionVenueDetailTv"
                        app:layout_constraintTop_toBottomOf="@id/trainingSessionVenueTv" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/findPlacePriceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/price"
                        android:textSize="@dimen/_10sdp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/trainingSessionCoachNameEnterNameTv" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/findPlaceActualPriceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/price_display"
                        android:textColor="@color/notificationRedIcon"
                        android:textSize="@dimen/_10sdp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/findPlacePriceTv" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/viewPlacesBtn"
                        android:layout_width="@dimen/_180sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:backgroundTint="@color/colorskyBlueBtn"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/view"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12sdp"
                        app:cornerRadius="@dimen/_20sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/findPlaceActualPriceTv" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>